<resources>
    <string name="app_name">Ambieye</string>
    <string name="welcome_back">Welcome Back 👋</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have an account? Sign In</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>

    <string-array name="security_questions">
        <item>What is your mother\'s maiden name?</item>
        <item>What was the name of your first pet?</item>
        <item>What was the name of your elementary school?</item>
        <item>In what city were you born?</item>
    </string-array>
</resources>